# lisa

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  coverage-badge.json  pyproject.toml
.claude/skills/commit/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml
prompts/: default.yaml
scripts/: coverage_badge.py
src/lisa/: __init__.py  __main__.py  auth.py  cli.py  constants.py  init.py  update.py
src/lisa/clients/: __init__.py  claude.py  linear.py
src/lisa/config/: __init__.py  prompts.py  schemas.py  settings.py  utils.py
src/lisa/defaults/: config.yaml
src/lisa/defaults/skills/: review-ticket.md
src/lisa/git/: __init__.py  branch.py  commit.py  worktree.py
src/lisa/models/: __init__.py  core.py  results.py  state.py
src/lisa/phases/: __init__.py  conclusion.py  constants.py  planning.py  verify.py  work.py
src/lisa/prompts/: default.yaml
src/lisa/schemas/: default.yaml
src/lisa/state/: __init__.py  comment.py  git.py
src/lisa/ui/: __init__.py  assumptions.py  output.py  timer.py
src/lisa/utils/: __init__.py  debug.py  formatting.py
tests/: __init__.py  conftest.py  test_auth.py  test_claude_client.py  test_cli.py  test_conclusion.py  test_config_prompts.py  test_config_schemas.py  test_config_settings.py  test_config_utils.py  test_debug.py  test_effort.py  test_expand_braces.py  test_formatting.py  test_git_branch.py  test_git_commit.py  test_git_state.py  test_init.py  test_linear_client.py  test_models.py  test_output.py  test_planning.py  test_preflight.py  test_state_comment.py  test_state_roundtrip.py  test_timer.py  test_token_tracker.py  test_update.py  test_verify.py  test_work_handlers.py  test_work_helpers.py  test_worktree.py
